correcting the spacing between objects

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -33,3 +33,7 @@ p {
 img {
     align-items: center;
 }
+
+footer {
+    padding-bottom: 10px;
+}
