--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
 span {
     border: 2px black solid;
     background-color: black;
-    opacity: .75;
+    opacity: .8;
 }
 
 .nav {
